# DRCSA_simulator

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  methodology.md
docs/adr/: 0001-use-yaml-policy-packs.md  0002-scenario-processing-pipeline.md
domain/: __init__.py
domain/engine/: __init__.py  policy.py
drc_sa_calculator/: __init__.py  cli.py
drc_sa_calculator/app/: __init__.py  dependencies.py  framework.py  main.py  schemas.py
drc_sa_calculator/app/routers/: compute.py  datasets.py  reference.py  scenarios.py
drc_sa_calculator/domain/: compare.py  models.py  rules.py
drc_sa_calculator/domain/engine/: __init__.py  calculator.py  policy.py
drc_sa_calculator/infrastructure/: __init__.py  memory.py
drc_sa_calculator/regdata/BCBS_MAR/: hedging_rules.yaml  lgd_tables.yaml
drc_sa_calculator/regdata/EU_CRR3/: hedging_rules.yaml  lgd_tables.yaml
drc_sa_calculator/ui/: __init__.py  server.py  services.py
drc_sa_calculator/ui/pages/: __init__.py  baseline.py  compare_view.py  data_loader.py  scenario_builder.py  scenario_matrix.py
hypothesis/: __init__.py  strategies.py
regdata/BCBS_MAR/: mappings.yaml  risk_weights.yaml
regdata/EU_CRR3/: mappings.yaml
schemathesis/: __init__.py
src/drc_sa_calculator/: cli.py
src/drc_sa_calculator/app/: dependencies.py  schemas.py
src/drc_sa_calculator/app/routers/: __init__.py  compute.py  datasets.py  reference.py  scenarios.py
src/drc_sa_calculator/domain/: __init__.py  rules.py
src/drc_sa_calculator/domain/engine/: calculator.py  policy.py
src/drc_sa_calculator/regdata/EU_CRR3/: risk_weights.yaml
src/drc_sa_calculator/ui/: server.py
src/drc_sa_calculator/ui/pages/: compare_view.py  data_loader.py  scenario_builder.py  scenario_matrix.py
tests/: __init__.py  conftest.py
tests/contract/: test_api_contract.py
tests/e2e/: test_export_flow.py
tests/property/: test_risk_weights.py
tests/unit/: test_compare.py  test_engine.py  test_framework.py
uvicorn/: __init__.py
yaml/: __init__.py
