[project]
name = "drc-sa-calculator"
version = "0.1.0"
description = "Default Risk Charge Standardised Approach calculator"
authors = [{name = "DRCSA Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "nicegui>=1.4.0",
    "pydantic>=1.10",
    "typer[all]>=0.9",
    "httpx>=0.24",
    "uvicorn>=0.22",
    "pyyaml>=6.0",
]

[project.scripts]
drcsa = "drc_sa_calculator.cli:app"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
