[project]
name = "drc-sa-calculator"
version = "0.1.0"
description = "Default Risk Charge Standardised Approach calculator"
authors = [{name = "DRCSA Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "nicegui>=1.4.0",
    "pydantic>=1.10",
    "typer[all]>=0.9",
    "httpx>=0.24",
    "uvicorn>=0.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "hypothesis>=6.100",
    "isort>=5.12",
    "mypy>=1.8",
    "playwright>=1.42",
    "pytest>=8.0",
    "schemathesis>=3.21",
    "ruff>=0.3",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
drcsa = "drc_sa_calculator.cli:app"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["drc_sa_calculator", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
show_error_codes = true
warn_unused_configs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "property: property-based tests using Hypothesis",
    "contract: OpenAPI contract tests via schemathesis",
    "e2e: end-to-end Playwright checks",
]
