[project]
name = "drc-sa-calculator"
version = "0.1.0"
description = "Default Risk Charge Standardised Approach calculator"
authors = [{name = "DRCSA Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.12",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.3",
]

[project.scripts]
drcsa = "drc_sa_calculator.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["drc_sa_calculator", "tests"]
src_paths = ["drc_sa_calculator", "tests"]

[tool.ruff]
line-length = 79
target-version = "py310"
src = ["drc_sa_calculator", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["drc_sa_calculator", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "drc_sa_calculator.ui.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "property: property-based tests using Hypothesis",
    "contract: OpenAPI contract tests via schemathesis",
    "e2e: end-to-end Playwright checks",
]
